# Bolteng

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.md  settings.ini
assets/meshes/table/: table.mtl
assets/shaders/: basic_fshader.glsl  basic_vshader.glsl  vshader.glsl
examples/: CMakeLists.txt
examples/render-model/: CMakeLists.txt
examples/render-model/src/: main.cpp  render_model.cpp  render_model.h
examples/render-model/src/scene/: render_3d_scene.cpp  render_3d_scene.h
examples/sokoban/: CMakeLists.txt  settings.ini
examples/sokoban/assets/shaders/: fshader.glsl  vshader.glsl
examples/sokoban/src/: main.cpp
examples/sokoban/src/application/: sokoban.cpp  sokoban.h
examples/sokoban/src/components/: collision_component.h  move_component.h
examples/sokoban/src/model/: controller.cpp  controller.h  level.cpp  level.h
examples/sokoban/src/scene/: level_scene.cpp  level_scene.h  splash_scene.cpp  splash_scene.h
examples/sokoban/src/systems/: collision_system.cpp  collision_system.h  move_system.cpp  move_system.h
include/bolteng/: bolteng.h  defines.h
include/bolteng/application/: boltapp.h
include/bolteng/components/: camera_component.h  components.h
include/bolteng/graphics/: mesh.h  shader.h
include/bolteng/input/: input.h  mouse.h
include/bolteng/maths/: common.h  euler.h  util.h  vector.h
include/bolteng/systems/: systems.h
include/bolteng/util/: settings.h
src/: assets.cpp  assets.h  audio.cpp  audio.h  camera.cpp  camera.h  display.cpp  display.h  level.cpp  level.h  levels.h  logging.cpp  main.cpp  settings.cpp  settings.h  sokoban.cpp  sokoban.h  sokoban_old.cpp
src/application/: boltapp.cpp
src/bolteng/: bolteng.h  defines.h  logging.cpp  logging.h
src/bolteng/application/: boltapp.cpp  boltapp.h  scene.h
src/bolteng/components/: components.h  framerate_component.cpp  framerate_component.h  move_component.h  pushable_component.h  pusher_component.h  render_component.h
src/bolteng/entities/: actor.cpp  actor.h
src/bolteng/graphics/: assimp.cpp  mesh.cpp  mesh.h  obj.cpp  shader.cpp
src/bolteng/input/: game_pad.cpp  game_pad.h  keyboard.h  platform.cpp
src/bolteng/maths/: euler.cpp  util.cpp  vector.cpp  vector.h
src/bolteng/subsystems/: display.cpp  events.cpp  platform_defines.cpp  render.cpp  subsystems.cpp  subsystems.h  time.cpp
src/bolteng/systems/: collision_system.cpp  collision_system.h  component_system.h  framerate_system.cpp  framerate_system.h  move_system.cpp  move_system.h  render_system.cpp  render_system.h
src/components/: framerate_component.cpp
src/core/: base_component_system.h  component.cpp  component.h  component_system.h  entity.cpp  entity.h  entity_manager.cpp  entity_manager.h  entity_system_types.h  logging.cpp  logging.h
src/core/subsystems/: display.cpp  input.cpp  subsystems.cpp  subsystems.h
src/engine/core/: defines.cpp  defines.h  engine.h
src/engine/core/components/: active_component.h  components.h  framerate_component.cpp  framerate_component.h  move_component.h  position_component.h  render_component.cpp  render_component.h  transform_component.h
src/engine/core/entities/: actor.cpp  actor.h
src/engine/core/input/: controller.cpp  controller.h  input.h  keyboard.cpp  keyboard.h  mouse.cpp  mouse.h  platform.h
src/engine/core/subsystems/: display.cpp  events.cpp  input.cpp  platform_defines.cpp  render.cpp  subsystems.cpp  subsystems.h  time.cpp
src/engine/core/systems/: collision_system.cpp  component_system.h  framerate_system.cpp  move_system.cpp  render_system.cpp  systems.h
src/engine/util/: settings.cpp  shaders.cpp
src/entities/: actor.cpp
src/graphics/: assimp.cpp  mesh.cpp  obj.cpp  shader.cpp
src/input/: game_pad.cpp  keyboard.cpp  mouse.cpp  platform.cpp
src/maths/: euler.cpp  util.cpp  vector.cpp
src/model/: controller.cpp  controller.h  level.cpp  level.h
src/physics/: transform_component.cpp  transform_component.h
src/render/: render_component.cpp  render_component.h  render_system.cpp  render_system.h
src/scene/: level_scene.cpp  level_scene.h  render_3d_scene.cpp  render_3d_scene.h  splash_scene.h
src/subsystems/: display.cpp  events.cpp  platform_defines.cpp  render.cpp  subsystems.cpp  time.cpp
src/systems/: framerate_system.cpp  render_system.cpp
src/util/: settings.cpp  shaders.h
tests/: CMakeLists.txt  testbolteng.cpp
